crates/linkage-blaze-core/tests/ui_fail/retain_param_indexes_duplicate.stderr
error[E0080]: evaluation panicked: duplicate index in retain list
 --> tests/ui_fail/retain_param_indexes_duplicate.rs:9:36
  |
9 | const BAD: LinkageFixed<2, 0, 5> = LINKAGE.retain_param_indexes(&[0, 0]);
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD` failed inside this call
  |
note: inside `LinkageFixed::<2, 0, 5>::retain_param_indexes::<2>`
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/lib.rs
  |
  | /                 assert!(
  | |                     indexes[previous_index] != retain_index,
  | |                     "duplicate index in retain list"
  | |                 );
  | |_________________- in this macro invocation
